# calypso-api

./: .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: dev-api-calypso.yml
settings/: setSecretsAndVariables.ps1
src/apicalypso/: __main__.py  cli.py  dockerfile  init_container.sh  main.py  requirements.txt  scaffold.py
src/apicalypso/auth/: auth_dependencies.py  auth_routes.py  auth_service.py  auth_utils.py
src/apicalypso/controllers/: base_controller.py  crudUsuarios_controller.py
src/apicalypso/core/: config.py  exceptions.py
src/apicalypso/database/: db.py  db_service.py
src/apicalypso/dependencies/: constants_descriptions.py  controllers_dependencies_inject.py  limitador.py
src/apicalypso/helpers/: validate_dataframe_helper.py
src/apicalypso/models/: models.py
src/apicalypso/repositories/: actualiza_registros_repository.py  consulta_tabla_repository.py  crudUsuarios_repository.py  elimina_registros_repository.py  inserta_registros_repository.py  patch_registros_repository.py
src/apicalypso/routes/: crudUsuarios_router.py
src/apicalypso/scaffold/: __init__.py  _io.py
src/apicalypso/scaffold/cicd/: __init__.py  _generator.py  _templates.py
src/apicalypso/scaffold/resources/api/: __init__.py  _generator.py  _templates_app.py  _templates_auth.py  _templates_crud.py  _templates_docker.py  _templates_readmes.py  _templates_repositories.py
src/apicalypso/schemas/: schemas.py
src/apicalypso/services/: crudUsuarios_service.py
src/apicalypso/utils/: defaultUser.py  logger.py
src/calypso_api/: __main__.py  cli.py  main.py  scaffold.py
src/calypso_api/core/: config.py
src/calypso_api/database/: db.py
src/calypso_api/routes/: health.py
