[project]
name = "calypso-api"
version = "0.1.1"
description = "Calypso API Library and CLI for scaffolding FastAPI projects"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  {name = "Juan Maniglia", email = "juan.maniglia@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: FastAPI",
]
dependencies = [
    "aiosqlite>=0.22.1",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "fastapi>=0.128.0",
    "python-dotenv>=1.2.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.22",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.46",
    "sqlmodel>=0.0.32",
    "typer>=0.21.1",
    "uvicorn>=0.40.0",
]

[project.scripts]
calypso = "calypso_api.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipython>=9.10.0",
]
