[tool.poetry]
name = "calypso-library"
version = "1.0.0"
description = "Calypso Library and CLI for scaffolding resource projects"
readme = "README.md"
license = "MIT"
authors = [
    "Juan Maniglia <jmaniglia@triplealpha.in>",
    "Javier Kniffki <jkniffki@triplealpha.in>"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: FastAPI",
]
packages = [{include = "apicalypso", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
fastapi = ">=0.136.1"
uvicorn = ">=0.46.0"
gunicorn = ">=25.3.0"
pydantic = ">=2.13.3"
sqlmodel = ">=0.0.24"
SQLAlchemy = ">=2.0.49"
asyncpg = ">=0.31.0"
contextlib2 = ">=21.6.0"
slowapi = ">=0.1.9"
cryptography = ">=47.0.0"
bcrypt = ">=5.0.0"
python-jose = {version = ">=3.3.0", extras = ["cryptography"]}
psycopg2-binary = ">=2.9.12"
python-multipart = ">=0.0.27"
httpx = ">=0.28.1"
requests = ">=2.33.1"
pytz = ">=2026.1.post1"
email-validator = ">=2.3.0"
pandas = ">=3.0.2"
pyarrow = ">=24.0.0"
orjson = ">=3.11.8"
typer = "^0.25.0"

[tool.poetry.group.dev.dependencies]
ipython = ">=9.10.0"

[tool.poetry.scripts]
calypso = "apicalypso.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
